# copycatting

./: README.md  reading_list
AlterEgo/: alter_ego.tex  basics.tex
GSLAM/: README.md
multiple_view_geometry/: README.md
multiple_view_stereo/: README.md
scripts/: addition  bashrc  vimrc
semantic_mapping/: README.md  (+1 more)
semantic_mapping/src/: CMakeLists.txt
semantic_mapping/src/core/engine/: color_tracker.cpp  color_tracker.h  composite_tracker.h  dense_mapper.cpp  dense_mapper.h  depth_tracker.cpp  depth_tracker.h  imu_calibrator.h  imu_tracker.cpp  imu_tracker.h  low_level_engine.h  main_engine.cpp  main_engine.h  meshing_engine.h  ren_tracker.cpp  ren_tracker.h  scene_reconstruction_engine.h  swapping_engine.h  tracker.h  tracking_controller.cpp  tracking_controller.h  viewer_builder.h  visualisation_engine.cpp  visualisation_engine.h  weighted_icp_tracker.cpp  weighted_icp_tracker.h
semantic_mapping/src/core/objects/: calibration_io.cpp  calibration_io.h  defines.h  disparity_calibration.h  extrinsics.h  global_cache.h  image_hierarchy.h  imu_measurement.h  intrinsics.h  local_voxel_block_array.h  math_defines.h  mesh.h  plain_voxel_array.h  point_cloud.h  pose.cpp  pose.h  render_state.h  render_state_voxel_hash.h  rgbd_calibration.h  scene.h  scene_hierarchy_level.h  scene_parameters.h  templated_hierarchy_level.h  tracking_state.h  view.h  view_hierarchy_level.h  view_imu.h  voxel_block_hash.h
semantic_mapping/src/core/utils/: defines.h  settings.cpp  settings.h
semantic_mapping/src/demo/: ui_engine.cpp  ui_engine.h
semantic_mapping/src/utils/: cholesky.h  cuda_wrapper.h  image.h  matrix.h  memory_block.h  platform.h  utils_math.h  vector.h
(+1 files in other folders)
